# Pyrrhula

./: .gitignore  Dockerfile  README.md  config.yml.example  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
