[tool.poetry]
name = "twitter_slack_bot"
version = "0.1.0"
description = ""
authors = ["Marius <marius-sol@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
slack-sdk = "^3.15.1"
tweepy = "^4.6.0"
python-dotenv = "^0.19.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
